--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
-        "axios": "^0.18.0"
+        "axios": "^0.18.0",
+        "exceljs": "^4.1.1"
     }
 }
